--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,14 @@ spring:
     name: 'spring-cloud-stream-kafka-avro-app'
   main:
     allow-bean-definition-overriding: true
+  datasource:
+    url: 'jdbc:h2:mem:db;DB_CLOSE_DELAY=-1'
+    username: 'sa'
+    password: 'sa'
+  h2:
+    console:
+      enabled: true
+      path: '/h2-console'
   cloud:
     stream:
       default:
@@ -35,3 +43,7 @@ spring:
             value.deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
             schema.registry.url: http://localhost:8081
             specific.avro.reader: true
+logging:
+  level:
+    org.springframework: INFO
+    net.elau.example.springcloudstreamkafkaavro: DEBUG
